--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="widhttps://i.postimg.cc/PfwZ6bDk/rocket.pngth=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"><script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.434/build/spline-viewer.js"></script>
+    <style>
+        .cont {
+            width: 100vw;
+            height: 105vh;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="indexz">
+    <div class="cont">
+        <spline-viewer url="https://prod.spline.design/PPrS0uqB4Y8Ai0l7/scene.splinecode"></spline-viewer>
+        <!-- <div class="indexz">
         <img src="logo.png" class="logo">
         <div class="content">
             <p>O site está em construção.</p>
@@ -23,7 +30,7 @@
             <button href="mailto:suporte@apptivium.com.br" type="button" id="contact-button">Entre em contato <img
                     src="https://i.postimg.cc/QC1THsDM/triangle.png"></button>
         </div>
-    </div>
+    </div> -->
 </div>
     
     <script src="assets/particles.js"></script>
