--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="widhttps://i.postimg.cc/PfwZ6bDk/rocket.pngth=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css"><script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.434/build/spline-viewer.js"></script>
-    <style>
-        .cont {
-            width: 100vw;
-            height: 105vh;
-        }
-    </style>
-</head>
+    <meta name="description" content="" />
+    <meta
+      name="viewport"
+      content="widhttps://i.postimg.cc/PfwZ6bDk/rocket.pngth=device-width, initial-scale=1"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/@splinetool/viewer@0.9.434/build/spline-viewer.js"
+    ></script>
+  </head>
 
-<body>
-    <div class="cont">
-        <spline-viewer url="https://prod.spline.design/PPrS0uqB4Y8Ai0l7/scene.splinecode"></spline-viewer>
-        <!-- <div class="indexz">
+  <body>
+    <div class="content">
+      <h1>EM BREVE!</h1>
+      <p>apptivium.com.br</p>
+      <!-- <div class="indexz">
         <img src="logo.png" class="logo">
         <div class="content">
             <p>O site está em construção.</p>
@@ -31,17 +32,22 @@
                     src="https://i.postimg.cc/QC1THsDM/triangle.png"></button>
         </div>
     </div> -->
-</div>
-    
+    <div class="topright">
+        <img src="pluses.webp" alt="" srcset="">
+    </div>
+    <div class="bottomleft">
+        <img src="pluses.webp" alt="" srcset="">
+    </div>
+    </div>
+
     <script src="assets/particles.js"></script>
     <script src="assets/app.js"></script>
     <script>
-        const contactButton = document.getElementById('contact-button');
-        contactButton.addEventListener('click', () => {
-          const mailtoLink = 'mailto:suporte@apptivium.com.br';
-          window.location.href = mailtoLink;
-        });
-      </script>
-</body>
-
+      const contactButton = document.getElementById("contact-button");
+      contactButton.addEventListener("click", () => {
+        const mailtoLink = "mailto:suporte@apptivium.com.br";
+        window.location.href = mailtoLink;
+      });
+    </script>
+  </body>
 </html>
