🌐 Add other languages

--- a/index.html
+++ b/index.html
@@ -1,53 +1,72 @@
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="widhttps://i.postimg.cc/PfwZ6bDk/rocket.pngth=device-width, initial-scale=1"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/@splinetool/viewer@0.9.434/build/spline-viewer.js"
-    ></script>
-  </head>
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <title></title>
+        <meta name="description" content=""/>
+        <meta name="viewport" content="widhttps://i.postimg.cc/PfwZ6bDk/rocket.pngth=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="styles.css"/>
+        <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.434/build/spline-viewer.js"></script>
+        
+    </head>
 
-  <body>
-    <div class="content">
-      <h1>EM BREVE!</h1>
-      <p>apptivium.com.br</p>
-      <!-- <div class="indexz">
-        <img src="logo.png" class="logo">
+    <body>
         <div class="content">
-            <p>O site está em construção.</p>
-            <h1><span>Lançamento</span> em:</h1>
-            <div class="launch-time">
-                <h1 style="font-size: 50px;">breve!</h1>
-                </div>
-
-            <button href="mailto:suporte@apptivium.com.br" type="button" id="contact-button">Entre em contato <img
-                    src="https://i.postimg.cc/QC1THsDM/triangle.png"></button>
+            <h1>EM BREVE!</h1>
+            <p>apptivium.com.br</p>
+            <div class="topright">
+                <img src="pluses.webp" alt="" srcset="">
+            </div>
+            <div class="bottomleft">
+                <img src="pluses.webp" alt="" srcset="">
+            </div>
         </div>
-    </div> -->
-    <div class="topright">
-        <img src="pluses.webp" alt="" srcset="">
-    </div>
-    <div class="bottomleft">
-        <img src="pluses.webp" alt="" srcset="">
-    </div>
-    </div>
 
-    <script src="assets/particles.js"></script>
-    <script src="assets/app.js"></script>
-    <script>
-      const contactButton = document.getElementById("contact-button");
-      contactButton.addEventListener("click", () => {
-        const mailtoLink = "mailto:suporte@apptivium.com.br";
-        window.location.href = mailtoLink;
-      });
-    </script>
-  </body>
+        <script>
+            const contactButton = document.getElementById("contact-button");
+            contactButton.addEventListener("click", () => {
+                const mailtoLink = "mailto:suporte@apptivium.com.br";
+                window.location.href = mailtoLink;
+            });
+        </script>
+        <script>
+          const texts = [
+              "EM BREVE!",
+              "SOON!",
+              "PRONTO!",
+              "곧!",
+              "Bientôt!", // French
+              "Bald!", // German
+              "Presto!", // Italian
+              "Binnenkort!", // Dutch
+              "Скоро!", // Russian
+              "近日中に!", // Japanese
+              "不久!", // Chinese (Simplified)
+              "곧!", // Korean
+              "قريبًا!", // Arabic
+              "जल्द!", // Hindi
+              "Snart!", // Swedish
+              "Yakında!", // Turkish
+              "Σύντομα!", // Greek
+              "Pian!", // Finnish
+              "Wkrótce!", // Polish
+              "Snart!", // Norwegian
+              "Snart!", // Danish
+              "בקרוב!" // Hebrew
+          ];
+          const h1Element = document.querySelector("h1");
+
+          let currentIndex = 0;
+
+          function changeText() {
+              h1Element.innerText = texts[currentIndex];
+              currentIndex = (currentIndex + 1) % texts.length;
+          }
+
+          let interval = setInterval(changeText, 10000);
+
+          // Initial text change
+          changeText();
+      </script>
+    </body>
 </html>
